--- a/develop/work_jquery/es6_template.html
+++ b/develop/work_jquery/es6_template.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script>
-        //es5
+        // es5
         var Iname="hong";
         var fname = "gil dong";
         var memo="나이:26 경력:2년";
@@ -14,12 +14,12 @@
 
 
         //es6
-        var Iname="woong";
-        var fname = "gil dong";
-        var memo=`나이:26 
+        let Iname2="woong";
+        let fname2 = "gil dong";
+        let memo2=`나이:26 
         경력:2년`;
-        var employee="my name is "+Iname+" "+fname+"\n"+memo;
-        console.log(employee);
+        let employee2=`my name is ${Iname2}, ${fname2} ${memo2}`;
+        console.log(employee2); 
     </script>
 </head>
 <body>
